Update comment from 'ADMISSION' to 'STUDENT'

--- a/Receipt5.html
+++ b/Receipt5.html
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <!-- 2. NEW ADMISSION FORM -->
+    <!-- 2. NEW STUDENT FORM -->
     <div class="card">
         <h2>➕ New Admission</h2>
         <input type="text" id="name" placeholder="Student Name">
